...
                onClick = onRegistro,
                shape = RoundedCornerShape(10.dp),
                colors = ButtonDefaults.outlinedButtonColors(contentColor = White),
                border = ButtonDefaults.outlinedButtonBorder(true).copy(brush = androidx.compose.ui.graphics.SolidColor(White)),
                modifier = Modifier.fillMaxWidth().height(59.dp)
            ) {
                Text("Registrarme como viajero", style = MaterialTheme.typography.titleLarge, color = White)
            }
        }

        Spacer(Modifier.height(24.dp))
        Text(
            "Al continuar, aceptas nuestros Términos de servicio y Política de privacidad",
...
